Fixed a problem where if the page was zoomed out the components would overlap each other and added the css file to style the table

--- a/src/components/HomePageContent.module.css
+++ b/src/components/HomePageContent.module.css
@@ -22,7 +22,7 @@
 
 .logoImg {
   position: absolute;
-  width: clamp(5rem, 4vw, 10rem);
+  width: clamp(5rem, 4vw, 5.5rem);
   top: 36px;
   left: 60px;
 }
@@ -43,7 +43,7 @@
   left: 200px;
 
   font-weight: 800;
-  font-size: clamp(1rem, 4vw, 6rem);
+  font-size: clamp(1rem, 4vw, 4rem);
 
   color: black;
 }
@@ -54,7 +54,7 @@
   top: 175px;
   left: 90px;
 
-  font-size: clamp(1rem, 3.6vw, 13rem);
+  font-size: clamp(1rem, 3.6vw, 3rem);
   font-weight: 700;
   text-align: left;
 
